Fixed spacing issue in chats

--- a/packages/client-core/src/components/InstanceChat/index.module.scss
+++ b/packages/client-core/src/components/InstanceChat/index.module.scss
@@ -282,6 +282,7 @@
     justify-content: flex-end;
     height: 100%;
     background: transparent;
+    padding: 5px;
 
     .first-message-placeholder {
       font-size: 2em;
